# vkr

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260411_0001_initial_schema.py  20260412_0002_reference_work_limits.py  20260413_0003_drop_parsed_attempt_snapshots.py  20260425_0004_reference_work_scoring_normalize.py  20260510_0005_reference_work_course_label.py
app/: __init__.py  main.py  training_hints.py
app/api/: deps.py  session.py  views.py
app/checker/: cross_task_checks.py  engine.py  error_analyzer.py  error_catalog.py  error_patterns.py  fd_algebra.py  grade_bands.py  parse_only.py  reference_compiler.py  result_enrichment.py  scoring.py  semantic_compare.py  timeout.py
tests/: conftest.py  test_app_smoke.py  test_auth_bruteforce.py  test_compare_task1_3_11.py  test_compare_task5.py  test_cross_task_checks_pipeline.py  test_csrf_middleware.py  test_engine_flow.py  test_error_catalog.py  test_fd_elementary_signature.py  test_grade_bands.py  test_normalizers.py  test_parser_flexible_etalon.py  test_parser_human_phrasing_failure_bank.py  test_reference_access.py  test_result_enrich_schema.py  test_result_enrich_task1_3.py  test_result_enrich_task5.py  test_section_locator.py  test_section_locator_trailing.py  test_semantic_compare.py  test_storage_paths.py  test_task3_formats.py  test_task9_soft.py  test_upload_stream_limit.py  test_workbook_validator.py
(+80 files in other folders)
