[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-normalization-checker"
version = "0.1.0"
description = "Web service for automated checking of database normalization homework (Excel .xlsx)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "openpyxl>=3.1.5",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "bcrypt>=4.0.0",
  "itsdangerous>=2.2.0",
  "python-dateutil>=2.9.0",
  "psycopg[binary]>=3.1.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/**/*", "static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
